package com.eolwral.osmonitor.core;

message logcatInfo {
  
  enum logPriority {  
    UNKNOWN = 0;  
    DEFAULT = 1;    
    VERBOSE = 2;  
    DEBUG = 3;  
    INFO = 4;  
    WARN = 5;  
    ERROR = 6;  
    FATAL = 7;  
    SILENT = 8; 
  } 
  required logPriority priority = 1 [default = UNKNOWN];
  
  required uint64 seconds = 2;        /**< seconds since Epoch */
  required uint64 nanoSeconds = 3;    /**< nanoseconds */
  required uint32 pid = 4;            /**< generating process's pid */
  required uint32 tid = 5;            /**< generating process's tid */
  required string tag = 6;            /**< Tag */
  required string message = 7;        /**< Message */

}