package com.eolwral.osmonitor.ipc;

enum ipcAction {
  OS = 1;             /**< OS */
  CPU = 2;            /**< CPU */
  PROCESSOR = 3;      /**< Processor */
  PROCESS = 4;        /**< Process */
  CONNECTION = 5;     /**< Connection */
  NETWORK = 6;        /**< Network */
  DMESG = 7;          /**< DMesg */
  LOGCAT_RADIO = 8;   /**< LogCat Radio */
  LOGCAT_EVENT = 9;   /**< LogCat Event */
  LOGCAT_SYSTEM = 10; /**< LogCat System */
  LOGCAT_MAIN = 11;   /**< LogCat Main */    
  SETPRIORITY = 20;    /**< Set Priority */
  KILLPROCESS = 21;   /**< Kill Processes */ 
}

message ipcData {
  required ipcAction action = 1;
  repeated bytes payload = 2;
}
  
message ipcMessage {
  
  enum ipcType {
    ACTION = 0;         /**< ACTION */
    RESULT = 1;         /**< RESULT */
    COMMAND = 2;		/**< COMMAND */
    EXIT = 10;			/**< EXIT */
  } 
  required ipcType type = 1 [default = ACTION];
 
  repeated ipcData data = 2;
  
}